// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": 1334,
        },
      ],
      "zIndex": 1,
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "caption": "react-native",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "Dolore do magna ullamco nisi quis.",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
      ]
    }
    extraData={-1}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={2}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    style={
      {
        "backgroundColor": "grey",
        "padding": 8,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            react-native
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            Dolore do ma...
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`it toggle open and can select item 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": 1334,
        },
      ],
      "zIndex": 1,
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "caption": "react-native",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "Dolore do magna ullamco nisi quis.",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
      ]
    }
    extraData={0}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={2}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    style={
      {
        "backgroundColor": "grey",
        "padding": 8,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "white",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "white",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            react-native
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            Dolore do ma...
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`it toggle open and close 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": 1334,
        },
      ],
      "zIndex": 1,
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "caption": "react-native",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "Dolore do magna ullamco nisi quis.",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
      ]
    }
    extraData={-1}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={2}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    style={
      {
        "backgroundColor": "grey",
        "padding": 8,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            react-native
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            Dolore do ma...
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`it toggle open and renderThumbnail 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": 1334,
        },
      ],
      "zIndex": 1,
    }
  }
>
  <RCTScrollView
    data={
      [
        {
          "caption": "react-native",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "Dolore do magna ullamco nisi quis.",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
      ]
    }
    extraData={-1}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={2}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    style={
      {
        "backgroundColor": "grey",
        "padding": 8,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <Text>
          react-native
        </Text>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <Text>
          Dolore do magna ullamco nisi quis.
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
